add an option of other to pronouns

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
 							<input type="radio" class="cursor" id="pronounsChoice3" name="pronouns" value="they/them">
 							<label for="pronounsChoice3" class="cursor">they/them</label>
+
+							<input type="radio" class="cursor" id="pronounsChoice4" name="pronouns" value="other">
+							<label for="pronounsChoice4" class="cursor">other</label>
+
 						</div>
 					</li>
 				</ul>
